Fix: Use relative path for background music

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button id="restart-button">Restart</button>
         </div>
     </div>
-    <audio id="background-music" src="https://archive.org/download/TetrisThemeMusic/Tetris.mp3" loop></audio>
+    <audio id="background-music" src="audio/Tetris.mp3" loop></audio>
     <audio id="move-sound" src="audio/sfx_movement_footsteps1.mp3"></audio>
     <audio id="rotate-sound" src="audio/sfx_sounds_button1.mp3"></audio>
     <audio id="drop-sound" src="audio/sfx_exp_short_hard1.mp3"></audio>
